Added automapper and more ef core changes

--- a/MediatR.Web/appsettings.json
+++ b/MediatR.Web/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AppDatabase": "Server=.\\SQLExpress;Database=mediatrdb;Trusted_Connection=True;"
+  }
 }
